# OOP2_Basic

./: CMakeLists.txt  My understanding.txt  main.cpp
Basic/: Basic.cpp  evalstate.cpp  evalstate.h  exp.cpp  program.cpp  program.h  statement.cpp  statement.h
